--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.9.RELEASE'
+        springBootVersion='2.1.9.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -29,14 +29,21 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('com.h2database:h2')
+    //compile('org.springframework.boot:spring-boot-starter-mustache')
 
-    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
-    compile('org.springframework.session:spring-session-jdbc')
+
+    //compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    //compile('org.springframework.session:spring-session-jdbc')
 
     compile("org.mariadb.jdbc:mariadb-java-client")
 
+    annotationProcessor('org.projectlombok:lombok')
+    implementation('org.projectlombok:lombok')
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile("org.springframework.security:spring-security-test")
+    //testCompile("org.springframework.security:spring-security-test")
+
+    testAnnotationProcessor('org.projectlombok:lombok')
+    testImplementation('org.projectlombok:lombok')
 }
