h2 console 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.jpa.show-sql=true
 #jpa query formatter
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+#show h2 database console
+#http://localhost:port/h2-console
+#set jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
