--- a/build.gradle
+++ b/build.gradle
@@ -26,22 +26,22 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.projectlombok:lombok')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('com.h2database:h2')
-    //compile('org.springframework.boot:spring-boot-starter-mustache')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.projectlombok:lombok')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('com.h2database:h2')
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
 
 
-    //compile('org.springframework.boot:spring-boot-starter-oauth2-client')
-    //compile('org.springframework.session:spring-session-jdbc')
+    //implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+    //implementation('org.springframework.session:spring-session-jdbc')
 
-    compile("org.mariadb.jdbc:mariadb-java-client")
+    implementation("org.mariadb.jdbc:mariadb-java-client")
 
     annotationProcessor('org.projectlombok:lombok')
     implementation('org.projectlombok:lombok')
 
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
     //testCompile("org.springframework.security:spring-security-test")
 
     testAnnotationProcessor('org.projectlombok:lombok')
