--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.jpa.show-sql=true
 #jpa query formatter
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+#OSIV 관련 찾아볼 것
+spring.jpa.open-in-view=false
 #show h2 database console
 #http://localhost:port/h2-console
 #set jdbc:h2:mem:testdb
